fixing overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,13 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
+  }
+  html {
+    overflow-x: hidden;
+  }
+  *, *::before, *::after {
+    box-sizing: border-box;
   }
 }
 
